--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.16.3)
 
 project(Cast-a-vote
         VERSION 3
-        DESCRIPTION "Internet search engine"
-        HOMEPAGE_URL "https://EsoUnion.com")
+        DESCRIPTION "Sindicato Paranal"
+        HOMEPAGE_URL "https://votacion.sindicatoparanal.cl")
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -11,9 +11,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O3")
 include_directories(include)
 file(GLOB SOURCES_WEB    "src/*.cpp")
 add_executable(castavote.wt ${SOURCES_WEB})
-
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
 
 find_package(
     Boost 1.67 COMPONENTS
@@ -33,11 +30,10 @@ target_link_libraries(
     pqxx
     wt
     wtfcgi
-    fmt::fmt
-    Threads::Threads)
+    fmt::fmt)
 
 install(TARGETS castavote.wt DESTINATION /var/www/paranal/bin/)
 #install(DIRECTORY etc/info DESTINATION /var/www/EsoUnion)
-#install(DIRECTORY etc/style DESTINATION /var/www/EsoUnion)
+install(DIRECTORY etc/style DESTINATION /var/www/paranal)
 install(DIRECTORY etc/approot DESTINATION /usr/local/etc/paranal)
 #install(FILES etc/words.json DESTINATION /usr/local/etc/paranal)
